package com.example.train.service;

import com.example.train.bean.Price;

public interface CalculateFareService {
    int calculateFare(double distance);
}
